@@ -1,3 +1,10 @@
+2009-12-07  Perry McFarlane  <perry_m@fastmail.fm>
+* USAGE, af80.[ch], atari.c, atari_sdl.c, cartridge.c, cfg.c, configure.ac,
+cpu.[ch], monitor.c, pbi.c:
+  Austin Franklin 80 Column card
+  Execution history now stores opcode data.
+
+
 2009-11-21  Perry McFarlane  <perry_m@fastmail.fm>
 * sio.c: replace random with rand for portability
   Commiting patch submitted by Tomasz Krasuski <tomasz.krasuski@interia.pl>
